welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: type mismatch;
 found   : Boolean(true)
 required: Boolean.type
	return vuBiscuit = true
                           ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
	return vuBiscuit = true
                         ^