welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit = Boolean
	
	for ( i <- 1 to  6 ) { avance() }

	return vuBiscuit = true
	
}
